src/snapshots/purs_oxide__parser__tests__ado_let.snap
---
source: src/parser.rs
expression: "parse_expr(indoc!(\"\n          ado\n            let x = 1\n            in 2\n        \"))"
---
Located(
    SourceSpan {
        start: 0,
        end: 22,
    },
    Ado(
        [
            Let(
                [
                    Located(
                        SourceSpan {
                            start: 10,
                            end: 15,
                        },
                        Commented(
                            [],
                            ValueDeclaration(
                                ValueDeclaration {
                                    ident: Symbol(
                                        "x",
                                    ),
                                    params: [],
                                    expr: Unconditional(
                                        Located(
                                            SourceSpan {
                                                start: 14,
                                                end: 15,
                                            },
                                            Literal(
                                                Integer(
                                                    1,
                                                ),
                                            ),
                                        ),
                                    ),
                                },
                            ),
                        ),
                    ),
                ],
            ),
        ],
        Located(
            SourceSpan {
                start: 21,
                end: 22,
            },
            Literal(
                Integer(
                    2,
                ),
            ),
        ),
    ),
)
