src/snapshots/purs_oxide__parser__tests__backtick_1.snap
---
source: src/parser.rs
expression: "parse_expr(\"1 `mod` 2\")"
---
Located(
    SourceSpan {
        start: 0,
        end: 9,
    },
    Infix(
        Located(
            SourceSpan {
                start: 0,
                end: 1,
            },
            Literal(
                Integer(
                    1,
                ),
            ),
        ),
        [
            (
                Backtick(
                    Located(
                        SourceSpan {
                            start: 3,
                            end: 6,
                        },
                        Var(
                            QualifiedName {
                                [salsa id]: 0,
                                module: None,
                                name: Symbol {
                                    [salsa id]: 0,
                                    text: "mod",
                                },
                            },
                        ),
                    ),
                ),
                Located(
                    SourceSpan {
                        start: 8,
                        end: 9,
                    },
                    Literal(
                        Integer(
                            2,
                        ),
                    ),
                ),
            ),
        ],
    ),
)
