src/snapshots/purs_oxide__parser__tests__backtick_4.snap
---
source: src/parser.rs
expression: "parse_expr(\"1 `(\\\\x y -> x)` 2\")"
---
Located(
    SourceSpan {
        decl: Module(
            ModuleId {
                name: "Test",
            },
        ),
        start: 0,
        end: 17,
    },
    Infix(
        Located(
            SourceSpan {
                decl: Module(
                    ModuleId {
                        name: "Test",
                    },
                ),
                start: 0,
                end: 1,
            },
            Literal(
                Integer(
                    1,
                ),
            ),
        ),
        [
            (
                Backtick(
                    Located(
                        SourceSpan {
                            decl: Module(
                                ModuleId {
                                    name: "Test",
                                },
                            ),
                            start: 3,
                            end: 14,
                        },
                        Lam(
                            [
                                Located(
                                    SourceSpan {
                                        decl: Module(
                                            ModuleId {
                                                name: "Test",
                                            },
                                        ),
                                        start: 5,
                                        end: 6,
                                    },
                                    Var(
                                        Symbol {
                                            text: "x",
                                        },
                                    ),
                                ),
                                Located(
                                    SourceSpan {
                                        decl: Module(
                                            ModuleId {
                                                name: "Test",
                                            },
                                        ),
                                        start: 7,
                                        end: 8,
                                    },
                                    Var(
                                        Symbol {
                                            text: "y",
                                        },
                                    ),
                                ),
                            ],
                            Located(
                                SourceSpan {
                                    decl: Module(
                                        ModuleId {
                                            name: "Test",
                                        },
                                    ),
                                    start: 12,
                                    end: 13,
                                },
                                Var(
                                    QualifiedName {
                                        module: None,
                                        name: Symbol {
                                            text: "x",
                                        },
                                    },
                                ),
                            ),
                        ),
                    ),
                ),
                Located(
                    SourceSpan {
                        decl: Module(
                            ModuleId {
                                name: "Test",
                            },
                        ),
                        start: 16,
                        end: 17,
                    },
                    Literal(
                        Integer(
                            2,
                        ),
                    ),
                ),
            ),
        ],
    ),
)
