src/snapshots/purs_oxide__parser__tests__backtick_5.snap
---
source: src/parser.rs
expression: "parse_expr(\"1 `2 + 2` 2\")"
---
Located(
    SourceSpan {
        start: 0,
        end: 11,
    },
    Infix(
        Located(
            SourceSpan {
                start: 0,
                end: 1,
            },
            Literal(
                Integer(
                    1,
                ),
            ),
        ),
        [
            (
                Backtick(
                    Located(
                        SourceSpan {
                            start: 3,
                            end: 8,
                        },
                        Infix(
                            Located(
                                SourceSpan {
                                    start: 3,
                                    end: 4,
                                },
                                Literal(
                                    Integer(
                                        2,
                                    ),
                                ),
                            ),
                            [
                                (
                                    Symbol(
                                        QualifiedName {
                                            symbol: Symbol {
                                                [salsa id]: 0,
                                                text: "+",
                                            },
                                            actually_qualified: false,
                                        },
                                    ),
                                    Located(
                                        SourceSpan {
                                            start: 7,
                                            end: 8,
                                        },
                                        Literal(
                                            Integer(
                                                2,
                                            ),
                                        ),
                                    ),
                                ),
                            ],
                        ),
                    ),
                ),
                Located(
                    SourceSpan {
                        start: 10,
                        end: 11,
                    },
                    Literal(
                        Integer(
                            2,
                        ),
                    ),
                ),
            ),
        ],
    ),
)
