src/snapshots/purs_oxide__parser__tests__block_argument.snap
---
source: src/parser.rs
expression: "parse_expr(\"f \\\\x -> y\")"
---
Located(
    SourceSpan {
        decl: Module(
            ModuleId {
                name: "Test",
            },
        ),
        start: 0,
        end: 9,
    },
    App(
        Located(
            SourceSpan {
                decl: Module(
                    ModuleId {
                        name: "Test",
                    },
                ),
                start: 0,
                end: 1,
            },
            Var(
                QualifiedName {
                    module: None,
                    name: Symbol {
                        text: "f",
                    },
                },
            ),
        ),
        [
            Located(
                SourceSpan {
                    decl: Module(
                        ModuleId {
                            name: "Test",
                        },
                    ),
                    start: 2,
                    end: 9,
                },
                Lam(
                    [
                        Located(
                            SourceSpan {
                                decl: Module(
                                    ModuleId {
                                        name: "Test",
                                    },
                                ),
                                start: 3,
                                end: 4,
                            },
                            Var(
                                Symbol {
                                    text: "x",
                                },
                            ),
                        ),
                    ],
                    Located(
                        SourceSpan {
                            decl: Module(
                                ModuleId {
                                    name: "Test",
                                },
                            ),
                            start: 8,
                            end: 9,
                        },
                        Var(
                            QualifiedName {
                                module: None,
                                name: Symbol {
                                    text: "y",
                                },
                            },
                        ),
                    ),
                ),
            ),
        ],
    ),
)
