src/snapshots/purs_oxide__parser__tests__block_argument_2.snap
---
source: src/parser.rs
expression: "parse_expr(\"f 1 \\\\x -> y\")"
---
Located(
    SourceSpan {
        decl: Module(
            ModuleId {
                name: "Test",
            },
        ),
        start: 0,
        end: 11,
    },
    App(
        Located(
            SourceSpan {
                decl: Module(
                    ModuleId {
                        name: "Test",
                    },
                ),
                start: 0,
                end: 1,
            },
            Var(
                QualifiedName {
                    module: None,
                    name: Symbol {
                        text: "f",
                    },
                },
            ),
        ),
        [
            Located(
                SourceSpan {
                    decl: Module(
                        ModuleId {
                            name: "Test",
                        },
                    ),
                    start: 2,
                    end: 3,
                },
                Literal(
                    Integer(
                        1,
                    ),
                ),
            ),
            Located(
                SourceSpan {
                    decl: Module(
                        ModuleId {
                            name: "Test",
                        },
                    ),
                    start: 4,
                    end: 11,
                },
                Lam(
                    [
                        Located(
                            SourceSpan {
                                decl: Module(
                                    ModuleId {
                                        name: "Test",
                                    },
                                ),
                                start: 5,
                                end: 6,
                            },
                            Var(
                                Symbol {
                                    text: "x",
                                },
                            ),
                        ),
                    ],
                    Located(
                        SourceSpan {
                            decl: Module(
                                ModuleId {
                                    name: "Test",
                                },
                            ),
                            start: 10,
                            end: 11,
                        },
                        Var(
                            QualifiedName {
                                module: None,
                                name: Symbol {
                                    text: "y",
                                },
                            },
                        ),
                    ),
                ),
            ),
        ],
    ),
)
