src/snapshots/purs_oxide__parser__tests__block_argument_3.snap
---
source: src/parser.rs
expression: "parse_expr(\"f $ g \\\\x -> y\")"
---
Located(
    SourceSpan {
        start: 0,
        end: 13,
    },
    Infix(
        Located(
            SourceSpan {
                start: 0,
                end: 1,
            },
            Var(
                QualifiedName {
                    module: None,
                    name: Symbol {
                        text: "f",
                    },
                },
            ),
        ),
        [
            (
                Symbol(
                    QualifiedName {
                        module: None,
                        name: Symbol {
                            text: "$",
                        },
                    },
                ),
                Located(
                    SourceSpan {
                        start: 4,
                        end: 13,
                    },
                    App(
                        Located(
                            SourceSpan {
                                start: 4,
                                end: 5,
                            },
                            Var(
                                QualifiedName {
                                    module: None,
                                    name: Symbol {
                                        text: "g",
                                    },
                                },
                            ),
                        ),
                        [
                            Located(
                                SourceSpan {
                                    start: 6,
                                    end: 13,
                                },
                                Lam(
                                    [
                                        Located(
                                            SourceSpan {
                                                start: 7,
                                                end: 8,
                                            },
                                            Var(
                                                Symbol {
                                                    text: "x",
                                                },
                                            ),
                                        ),
                                    ],
                                    Located(
                                        SourceSpan {
                                            start: 12,
                                            end: 13,
                                        },
                                        Var(
                                            QualifiedName {
                                                module: None,
                                                name: Symbol {
                                                    text: "y",
                                                },
                                            },
                                        ),
                                    ),
                                ),
                            ),
                        ],
                    ),
                ),
            ),
        ],
    ),
)
