src/snapshots/purs_oxide__parser__tests__case_guards_1.snap
---
source: src/parser.rs
expression: "parse_expr(indoc!(\"\n          case x of\n            A | true -> 1\n              | false -> 2\n        \"))"
---
Located(
    SourceSpan {
        start: 0,
        end: 43,
    },
    Case {
        exprs: [
            Located(
                SourceSpan {
                    start: 5,
                    end: 6,
                },
                Var(
                    QualifiedName {
                        symbol: Symbol(
                            Id {
                                value: 1,
                            },
                        ),
                        actually_qualified: false,
                    },
                ),
            ),
        ],
        branches: [
            CaseBranch {
                pats: [
                    Located(
                        SourceSpan {
                            start: 12,
                            end: 13,
                        },
                        DataConstructorApp(
                            QualifiedName {
                                symbol: Symbol(
                                    Id {
                                        value: 2,
                                    },
                                ),
                                actually_qualified: false,
                            },
                            [],
                        ),
                    ),
                ],
                expr: Guarded(
                    [
                        GuardedExpr {
                            guards: [
                                Expr(
                                    Located(
                                        SourceSpan {
                                            start: 16,
                                            end: 20,
                                        },
                                        Literal(
                                            Boolean(
                                                true,
                                            ),
                                        ),
                                    ),
                                ),
                            ],
                            expr: Located(
                                SourceSpan {
                                    start: 24,
                                    end: 25,
                                },
                                Literal(
                                    Integer(
                                        1,
                                    ),
                                ),
                            ),
                        },
                        GuardedExpr {
                            guards: [
                                Expr(
                                    Located(
                                        SourceSpan {
                                            start: 32,
                                            end: 37,
                                        },
                                        Literal(
                                            Boolean(
                                                false,
                                            ),
                                        ),
                                    ),
                                ),
                            ],
                            expr: Located(
                                SourceSpan {
                                    start: 41,
                                    end: 42,
                                },
                                Literal(
                                    Integer(
                                        2,
                                    ),
                                ),
                            ),
                        },
                    ],
                ),
            },
        ],
    },
)
